<resources>
    <string name="app_name">HelloHelper</string>
    <string name="title_home">主页</string>
    <string name="title_dashboard">应用</string>
    <string name="title_notifications">个人</string>
    <string name="setting">设置</string>
    <string name="find">查快递</string>
    <string name="countries_and_areas">国家和地区</string>
    <string name="password">密码</string>
    <string name="input_id">请填写用户名</string>
    <string name="id">用户名</string>
    <string name="ple_password">填写密码</string>
    <string name="login">登录</string>
    <string name="click_login">点击登陆</string>

    <string name="problems">登录遇到问题？</string>
    <string name="login_register">注册</string>
    <string name="confirm_password">确认密码</string>
    <string name="nickname">输入昵称</string>
    <string name="sex_boy">男</string>
    <string name="sex_girl">女</string>
    <string name="radio_sex">性别</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码？</string>
    <string name="Chatting">聊天</string>
    <string name="Application">应用</string>
    <string name="Personal">个人</string>
    <string name="Learning">学习</string>
    <string name="shop">商城</string>
    <string name="friends">朋友</string>
    <string name="Community">社区</string>

    <string name="feedback">意见反馈</string>
    <string name="share">分享</string>
    <string name="input_translation_words">请输入要翻译的内容</string>
    <string name="tanslator">翻译</string>
    <string name="express">快递</string>
    <string name="pulish">我发布的</string>
    <string name="Head_icon">头像</string>
    <string name="informations">信息</string>
    <string name="personal_infomation">个人信息</string>
    <string name="username">昵称</string>
    <string name="sex">性别</string>
    <string name="quit">退出</string>
    <string name="submit">提交</string>
    <string name="moveAndzoom">移动和缩放</string>
    <string name="cancel">取消</string>

    <string name="choose">选取</string>
    <string name="chooseFromAblum">从相册选择</string>
    <string name="takePhoto">拍照</string>
    <string name="tanslate">翻译</string>
    <string name="transl">翻译</string>
    <string name="back">返回</string>
    <string name="translate">翻译</string>
    <string name="activity">活动</string>
    <string name="reply">与我相关</string>
    <string name="collection">我的收藏</string>
    <string name="inputpwd">填写密码</string>
    <string name="confirmpass">确认密码</string>
    <string name="OCR">图片识别</string>
    <string name="notification">消息</string>


    <!--2017-10-->
    <string name="update_download_failed">下载失败</string>
    <string name="update_download_start">下载开始</string>
    <string name="update_download_progressing">正在下载</string>
    <string name="update_download_finish">下载完成</string>
    <string name="update_immediately">立即升级</string>
    <string name="update_prompt">升级提示</string>
    <string name="update_nexttime">下次再说</string>
    <string name="ok">确定</string>
    <string name="clear">清空</string>
    <string name="paste">粘贴</string>
    <!-- Naiv-->

    <string name="map_navi_isToNavigation">是否开始导航</string>
    <string name="map_navi_goToNavigation">点击确定开始导航</string>

    <!-- 关于我们-->
    <string name="about_us">关于我们</string>
    <string name="exchange_rate">汇率转换</string>
    <string name="app_map">地图</string>
    <string name="map_navi_isOutOfNavigation">是否退出导航？</string>
    <string name="map_navi_OutOfNavigation">点击确定退出导航</string>

    <string name="map_navi_is_end">是否退出导航？</string>
    <string name="map_navi_is_end_OK">点击确定退出导航</string>


    <string name="Currencylayer_Key">3741afd246e484205bd81b6bf1ac2922</string>
    <string name="Free_CC_link">http://free.currencyconverterapi.com/api/v3/convert?q=</string>

    <!--全局-->
    <string name="networkIsNotAvailableTitle">网络错误</string>
    <string name="networkIsNotAvailableContent">请检查你的网络连接！</string>

    <string name="chEnArticle">文化学习</string>

    <string name="is_exit">是否退出APP?</string>
    <string name="ok_exit_app">点击确定退出APP</string>

    <!--快递-->
    <string name="app_express_tip">请粘贴你的短信.</string>
    <string name="activity_about_us">
    Dear Friend:\n
        We are a team from the Wenzhou University, in order to help students in China better life and learning, in the APP to provide a delivery point query, community, text translation, exchange rate conversion etc.. When the user registers an account, it automatically jumps to the map navigation interface by inputting the text message, and adds English pronunciation and synchronized English subtitles when using the map related function. At the same time, Chinese and foreign users can publish some of their own articles or ideas in the communication community, at the same time, comments and replies, and promote exchanges between China and foreign countries.
        Although we have tried to improve, but there are many defects and deficiencies, in order to give you more help, if you find any problems in the process of use, please give us feedback, we will be the first time to make corrections, only in this way, we can make progress together, grow together.
        \nContact Information：
        \n\tWeChat: julis617669559
        \n\tEmail: 1607637473@qq.com\n\n\n\n\n.

    </string>

    <!--交流社区-->
    <string name="tab_top">置顶</string>
    <string name="tab_all">全部</string>
    <string name="tab_good">精华</string>
    <string name="tab_unknown">未知</string>
    <string name="tab_share">分享</string>
    <string name="tab_ask">问答</string>
    <string name="tab_job">招聘</string>
    <string name="tab_dev">测试</string>


    <string name="author">作者</string>
    <string name="topic__">话题：%s</string>
    <string name="__floor">%d楼</string>
    <string name="reply___floor">回复：%d楼</string>
    <string name="create_at__">创建于：%s</string>
    <string name="score__">积分：%d</string>
    <string name="register_time__">注册时间：%s</string>
    <string name="__create">%s创建</string>
    <string name="__count_visit">%d次浏览</string>
    <string name="__count_reply">%d条回复</string>
    <string name="_slash_">/</string>
    <string name="_dot_">•</string>
    <string name="no_reply">暂无回复</string>
    <string name="create_topic_content_hint">说点什么吧</string>


    <string name="no_market_install_in_system">系统中没有安装应用商店</string>
    <string name="no_browser_install_in_system">系统中没有安装浏览器</string>
    <string name="no_email_client_install_in_system">系统中没有安装邮件客户端</string>


    <string name="logout">注销</string>
    <string name="need_login_tip">该操作需要登录账户。是否现在登录？</string>
    <string name="logout_tip">确定要注销吗？</string>
    <string name="login_success">登录成功</string>
    <string name="relogin">重新登录</string>

    <string name="load_more_finished">已经到底啦</string>
    <string name="load_more_failed">加载失败，点击重试</string>


    <string name="dra_nav_mytopic"></string>
    <string name="create_topic_title_hint">标题</string>
    <string name="send_to_tab__">发布到分类：</string>
    <string name="topic">话题</string>
    <string name="new_topic">发布话题</string>
    <string name="post_success">发布成功</string>
    <string name="recently_reply">最近回复</string>
    <string name="recently_topic">最近发布</string>
    <string name="setting_langeuage">语言</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

</resources>
